--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -3820,7 +3820,7 @@ section.lazy-placeholder:after {
 }
 .cid-rFosq9Zoe1 H1 {
   text-align: left;
-  color: #ff3366;
+  color: #ffffff;
 }
 .cid-rFosq9Zoe1 H3 {
   text-align: left;
