create github pages

--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -3819,7 +3819,7 @@ section.lazy-placeholder:after {
   background-image: url("../../../assets/images/image4-2000x1333.jpg");
 }
 .cid-rFosq9Zoe1 H1 {
-  text-align: left;
+  text-align: center;
   color: #ffffff;
 }
 .cid-rFosq9Zoe1 H3 {
